--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 *{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Oswald',sans-serif;
 }
@@ -15,8 +17,6 @@
 html{scroll-behavior: smooth;}
 
 body{
-    margin: 0;
-    padding: 0;
     background-color: #f2f2f2;
 }
 
@@ -30,7 +30,7 @@ button{
     font-family: sans-serif;
 }
 
-/***NAV***/
+/***********************NAV***********************/
 nav{position: sticky;
     top: 0;}
 /* Add a black background color to the top navigation */
@@ -93,7 +93,7 @@ nav {
     }
   }
 
-/***HERO***/
+/***********************HERO***********************/
 #hero{
     background-image: url(../img/hero.jpg);
     background-size: cover;
@@ -120,7 +120,7 @@ nav {
     color: #3581B8;
 }
   
-/***WRAPPER***/
+/***********************WRAPPER***********************/
 
 #wrapper{
     width: 100%;
@@ -131,7 +131,7 @@ nav {
     #wrapper{width: 90%;}
 }
 
-/***INTRO**/
+/***********************INTRO***********************/
 
 #intro h1{
     color: #3581B8;
@@ -165,14 +165,14 @@ nav {
   
 #intro h3{
     font-family: 'Oswald';
-    font-size: 1.5em; /*tamaño erroneo*/
+    font-size: 1.5em;
     color: white;
     text-align: center;
 }
   
 #intro p{
     font-family: sans-serif;
-    font-size: 1.1em; /*tamaño erroneo*/
+    font-size: 1.1em;
     color: white;
     text-align: center;
 }
@@ -194,7 +194,7 @@ nav {
     #intro .grid-3{gap: 2em;}
 }
 
-/***STARTING**/
+/***********************STARTING**********************/
 
 #starting{
     background-color: #3581B8;
@@ -205,6 +205,7 @@ nav {
     padding-top: 13%;
     font-size: 1.8em;
     text-align: center;
+    padding-bottom: 3%;
 }
   
   
@@ -231,7 +232,7 @@ nav {
 }
   
 #starting button{
-    font-size: 0.9em; /*tamaño erroneo*/
+    font-size: 0.9em;
     text-decoration: none;
     color: black;
     padding: 7px 15px;
@@ -248,12 +249,14 @@ nav {
     #starting p{font-size: 1.2em;}
     .grid-2{grid-template-columns: auto auto;}
     #starting .grid-2{gap: 2em;}
-    #starting .text{padding: 10% 4%;}
+    #starting .text{padding: 1% 4%;}
 }
-/***GALLERY***/
+
+/***********************GALLERY***********************/
 #gallery{
     padding-bottom: 3%;
 }
+
 #gallery h1{
     color: #000000;
     padding-top: 13%;
@@ -299,4 +302,5 @@ nav {
 @media screen and (min-width:940px) {
     #gallery h1{font-size: 2.5em; padding-top: 6%}
 }
-/***CONTACT***/
+
+/***********************CONTACT***********************/
