--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ nav{position: sticky;
     top: 0;}
 /* Add a black background color to the top navigation */
 nav {
-    background-color: #000000;
+    background-color: #000000e3;
     overflow: hidden;
     position: fixed;
     z-index: 99;
@@ -50,12 +50,12 @@ nav {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 1.3em;
     font-family: 'Oswald';
   }
 
 @media screen and (min-width:940px) {
-    .topnav a{font-size: 1.2em;}
+    .topnav a{font-size: 1.25em;}
 }  
 
   /* Change the color of links on hover */
@@ -70,7 +70,7 @@ nav {
   }
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width:940px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
       float: right;
@@ -79,7 +79,7 @@ nav {
   }
   
   /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 940px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
       position: absolute;
@@ -103,7 +103,7 @@ nav {
 }
 #hero h1{
     color: #f2f2f2;
-    font-size: 1.3em;
+    font-size: 1.4em;
 }
 
 @media screen and (min-width:940px) {
@@ -165,14 +165,14 @@ nav {
   
 #intro h3{
     font-family: 'Oswald';
-    font-size: 1.5em;
+    font-size: 1.6em;
     color: white;
     text-align: center;
 }
   
 #intro p{
     font-family: sans-serif;
-    font-size: 1.1em;
+    font-size: 1.25em;
     color: white;
     text-align: center;
 }
@@ -226,7 +226,7 @@ nav {
 }
 #starting p{
     font-family: sans-serif;
-    font-size: 1.1em;
+    font-size: 1.25em;
     color: white;
     text-align: center;
 }
