--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ nav {
 }
 #hero h1{
     color: #f2f2f2;
-    font-size: 1.4em;
+    font-size: 1.6em;
 }
 
 @media screen and (min-width:940px) {
@@ -136,7 +136,7 @@ nav {
 #intro h1{
     color: #3581B8;
     padding-top: 13%;
-    font-size: 1.8em;
+    font-size: 1.9m;
     text-align: center;
 }
   
@@ -165,14 +165,14 @@ nav {
   
 #intro h3{
     font-family: 'Oswald';
-    font-size: 1.6em;
+    font-size: 1.7em;
     color: white;
     text-align: center;
 }
   
 #intro p{
     font-family: sans-serif;
-    font-size: 1.25em;
+    font-size: 1.35em;
     color: white;
     text-align: center;
 }
@@ -203,7 +203,7 @@ nav {
 #starting h1{
     color: #f2f2f2;
     padding-top: 13%;
-    font-size: 1.8em;
+    font-size: 1.9em;
     text-align: center;
     padding-bottom: 3%;
 }
@@ -226,7 +226,7 @@ nav {
 }
 #starting p{
     font-family: sans-serif;
-    font-size: 1.25em;
+    font-size: 1.35em;
     color: white;
     text-align: center;
 }
@@ -260,7 +260,7 @@ nav {
 #gallery h1{
     color: #000000;
     padding-top: 13%;
-    font-size: 1.8em;
+    font-size: 1.9em;
     text-align: center;
 }
   
