--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ nav {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 200%;
+    font-size: 1.6em;
     font-family: 'Oswald';
   }
 
