--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ nav {
 #starting .grid-2{
     padding-bottom: 3%;
 }
+
 #starting p{
     font-family: sans-serif;
     font-size: 1.2em;
@@ -329,4 +330,242 @@ nav {
     #gallery h1{font-size: 2.5em; padding-top: 6%}
 }
 
-/***********************CONTACT***********************/
+
+/***********************ROUTINES***********************/
+
+#routines{
+    background-color: #3581B8;
+}
+  
+#routines h1{
+    color: #f2f2f2;
+    padding-top: 15%;
+    font-size: 2.1em;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+#routines p{
+    font-size: 1.2em;
+    color: white;
+}
+
+#routines {
+    width: 100%;
+    height: 100vh;
+    background-color: #3581B8;
+}
+  
+#routines .container{
+    width: 100%;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+}
+  
+.accordion-item{
+    background-color: #3581B8;
+    border-radius: .4rem;
+}
+  
+.accordion-item hr{
+    border: 1px solid rgba(255, 255, 255, 0.5);
+}
+  
+.accordion-link{
+    font-size: 1.6rem;
+    color: rgba(255,255,255,.8);
+    text-decoration: none;
+    background-color: #3581B8;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+  
+.accordion-link h3{
+    font-weight:500;
+    font-size: 20px;
+}
+  
+.accordion-link i{
+    color: #e7d5ff;
+    padding: .5rem;
+    
+}
+  
+.accordion-link ul{
+    display:flex;
+    align-items: flex-end;
+    list-style-type: none;
+    margin-left: 25px;
+}
+  
+.accordion-link li{
+    font-size: 10px;
+    color: rgba(255, 255, 255, 0.4);
+    padding: 0 0 1px 5px;
+}
+  
+.accordion-link div{
+    display: flex;
+}
+  
+.accordion-link .ion-md-arrow-down{
+    display: none;
+}
+  
+.answer{
+    max-height: 0;
+    overflow: hidden;
+    position: relative;
+    background-color: #3581B8;
+    transition: max-height 650ms;
+}
+  
+  
+  
+.answer p{
+    color: #fff;
+    font-size: 15px;
+    padding: 2rem;
+    
+}
+  
+.accordion-item:target .answer{
+    max-height: 20rem;
+}
+  
+.accordion-item:target .accordion-link .ion-md-arrow-forward{
+    display: none
+}
+  
+.accordion-item:target .accordion-link .ion-md-arrow-down{
+    display: block;
+}
+
+@media screen and (min-width:940px) {
+    #routines h1{font-size: 2.5em; padding-top: 6%;}
+    #routines p{font-size: 1em;}
+}
+/***********************FOOTER***********************/
+
+footer{
+    background-color: rgb(17, 17, 17);
+    display: flex;
+    flex-direction: column;
+}
+
+#footer .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 1rem 2rem;
+}
+
+#footer h2{
+    color: #f2f2f2;
+}
+
+#footer .titulos-footer{
+    font-weight: 300;
+    display: inline-block;
+    padding-bottom: .6rem;
+    margin: 1rem 0;
+    position: relative;
+}
+
+#footer .titulos-footer:before{
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 1px;
+    bottom: 0;
+    left: 0%;
+    border-bottom: .2rem solid #3581B8;
+}
+
+#footer .sobre-mi p{
+    font-size: 1rem;
+    line-height: 1.4rem;
+    padding-bottom: 1rem;
+    color: #e0e0e0;
+}
+
+#footer .redes-sociales{
+    display: flex;
+    gap: 1rem;
+    margin: .5rem 0;
+}
+
+#footer .redes-sociales a{
+    padding: .6rem;
+    background-color: #f2f2f2;
+    border-radius: .2rem;
+}
+
+#footer .redes-sociales a:hover{
+    background-color: #3581B8;
+}
+
+#footer .fa-brands{
+    font-size: 1.3rem;
+    color: #3581B8;
+}
+
+#footer .fa-brands:hover{
+    color: #f2f2f2;
+}
+
+
+#footer .navegacion ul{
+    list-style: none;
+    text-decoration: none;
+}
+#footer .navegacion li a{
+    display: inline-block;
+    margin-bottom: .8rem;
+    color: #e0e0e0;
+}
+
+#footer .navegacion li a:hover{
+    color: white;
+}
+
+#footer .informacion-contacto li{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+#footer .informacion-contacto p{
+    color: #e0e0e0;
+}
+
+#footer .fa-solid{
+    font-size: 1.2rem;
+    max-height: 1rem;
+    max-width: 1rem;
+    color: #f2f2f2;
+}
+
+#footer .copy{
+    text-align: center;
+    font-size: .9rem;
+    line-height: 1.4rem;
+    background-color: #ffffff;
+    background-color: #303030;
+    padding: .5rem;
+}
+
+@media (min-width: 750px){
+    #footer .container{
+        flex-direction: row;
+    }
+    .sobre-mi{
+        width: 40%;
+    } 
+}
