--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,9 @@ nav {
     color: white;
 }
 
+#routines h3{
+    padding-top: 10%;
+}
 #routines {
     width: 100%;
     height: 100vh;
@@ -436,7 +439,10 @@ nav {
 .accordion-item:target .answer{
     max-height: 20rem;
 }
-  
+
+.accordion .icon{
+    color: #f2f2f2;
+}
 .accordion-item:target .accordion-link .ion-md-arrow-forward{
     display: none
 }
