--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ nav {
 }
 
 #intro #col-3b{
-    background-color: #535050;
+    background-color: #303030;
 }
 
 #intro img{width: 100%;}
@@ -257,7 +257,10 @@ nav {
     color: white;
     text-align: center;
 }
-  
+
+#more {display: none;}
+
+#more{font-family: sans-serif;}
 #starting button{
     font-size: 0.7em;
     text-decoration: none;
@@ -565,7 +568,50 @@ footer{
     background-color: #ffffff;
     background-color: #303030;
     padding: .5rem;
+    color: #f2f2f2;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+  
+ 
+  .modal-content {
+    background-color: #303030;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    color: #f2f2f2;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal a{
+    text-decoration: none;
+    color: white;
+  }
 
 @media (min-width: 750px){
     #footer .container{
