--- a/css/style.css
+++ b/css/style.css
@@ -617,6 +617,7 @@ footer{
     color: white;
   }
 
+  .copy button:hover{background-color: rgba(211, 229, 235, 0.808);}
 @media (min-width: 750px){
     #footer .container{
         flex-direction: row;
